# LivarH

./: README  configure.ac
ADOL-C/: Makefile.am
ADOL-C/examples/additional_examples/openmp_exam/: liborpar.cpp
ADOL-C/include/: Makefile.am
ADOL-C/include/adolc/: Makefile.am
ADOL-C/include/adolc/hessian/: Makefile.am  edge_b_tree.h  edge_check.h  edge_graph.h  edge_local_graph.h  edge_main.h  edge_tape.h  edge_uni5_push.h
ADOL-C/include/adolc/hypertensor/: HyperGraph.h  HyperGraphMap.h  Makefile.am  MatrixGraph.h  MatrixGraphMap.h  VectorGraph.h  VectorGraphMap.h  generic_derivative.h  generic_derivative_table.h  generic_mpi.h  generic_mpi_reverse.h  generic_mpi_tensor.h  generic_mpi_trace.h  generic_reverse.h  generic_tape.h  generic_tensor.h  hyper_common.h  hyper_derivative.h  hyper_main.h  hyper_mpi_reverse.h  hyper_mpi_tensor.h  hyper_pushing.h  hyper_reverse.h  hyper_tape.h  hyper_tensor.h  hyper_third_reverse.h  opencomb.h  opencomb_multi_set.h  opencomb_multi_subset.h  opencomb_partition.h
ADOL-C/include/adolc/internal/: adolc_settings.h.in
ADOL-C/src/: Makefile.am  adouble.cpp  oplate.h  uni5_for.c
ADOL-C/src/hessian/: Makefile.am  edge_b_tree.cpp  edge_b_tree.h  edge_check.cpp  edge_graph.cpp  edge_local_graph.cpp  edge_main.cpp  edge_pushing_a.cpp  edge_pushing_pre_a.cpp  edge_pushing_pre_s.cpp  edge_pushing_s.cpp  edge_tape.cpp  edge_uni5_push.cpp
ADOL-C/src/hypertensor/: GraphTest  GraphTest.cpp  HyperGraph.h  HyperGraphMap.cpp  HyperGraphMap.h  Makefile.am  MatrixGraphMap.cpp  MatrixGraphMap.h  VectorGraphMap.cpp  VectorGraphMap.h  generic_derivative_table.cpp  generic_mpi.cpp  generic_mpi_reverse.cpp  generic_mpi_tensor.cpp  generic_mpi_trace.cpp  generic_reverse.cpp  generic_tape.cpp  generic_tensor.cpp  hyper_main.cpp  hyper_mpi_reverse.cpp  hyper_mpi_tensor.cpp  hyper_pushing.cpp  hyper_reverse.cpp  hyper_tape.cpp  hyper_tensor.cpp  hyper_third_reverse.cpp
ADOL-C/src/sparse/: sparsedrivers.cpp
