##############################################################################
## Makefile.am -- Process this file with automake to produce Makefile.in
## Revision: $Id: Makefile.am 354 2012-10-01 11:32:26Z kulshres $
##
## Copyright (C)  Andrea Walther, Andreas Kowarz, Kshitij Kulshreshtha
##
## This file is part of ADOL-C. This software is provided as open source.
## Any use, reproduction, or distribution of the software constitutes 
## recipient's acceptance of the terms of the accompanying license file.
## 
##############################################################################

libhessianincludedir      = $(pkgincludedir)/hessian

libhessianinclude_HEADERS = edge_main.h edge_check.h edge_graph.h edge_tape.h edge_uni5_push.h edge_local_graph.h
