##############################################################################
## Makefile.am -- Process this file with automake to produce Makefile.in
## Revision: $Id: Makefile.am 354 2012-10-01 11:32:26Z kulshres $
##
## Copyright (C)  Andrea Walther, Andreas Kowarz, Kshitij Kulshreshtha
##
## This file is part of ADOL-C. This software is provided as open source.
## Any use, reproduction, or distribution of the software constitutes 
## recipient's acceptance of the terms of the accompanying license file.
## 
##############################################################################

libhypertensorincludedir      = $(pkgincludedir)/hypertensor

libhypertensorinclude_HEADERS = VectorGraph.h VectorGraphMap.h \
                                MatrixGraph.h MatrixGraphMap.h \
                                HyperGraph.h HyperGraphMap.h \
                                hyper_tensor.h hyper_tape.h \
                                hyper_third_reverse.h hyper_common.h \
                                hyper_reverse.h \
                                opencomb.h \
                                opencomb_multi_set.h\
                                opencomb_multi_subset.h\
                                opencomb_partition.h\
                                generic_derivative.h\
                                generic_tensor.h\
                                generic_reverse.h\
                                generic_derivative_table.h
