##############################################################################
## Makefile.am -- Process this file with automake to produce Makefile.in
## Revision: $Id: Makefile.am 354 2012-10-01 11:32:26Z kulshres $
##
## Copyright (C)  Andrea Walther, Andreas Kowarz, Kshitij Kulshreshtha
##
## This file is part of ADOL-C. This software is provided as open source.
## Any use, reproduction, or distribution of the software constitutes 
## recipient's acceptance of the terms of the accompanying license file.
## 
##############################################################################

libhypertensorincludedir      = $(pkgincludedir)/hypertensor

libhypertensorinclude_HEADERS = hyper_common.h\
                                opencomb_multi_set.h\
                                generic_derivative.h\
                                generic_reverse.h\
                                generic_derivative_table.h\
                                generic_mpi_trace.h\
                                generic_mpi.h\
                                generic_mpi_tensor.h\
                                generic_mpi_reverse.h\
                                generic_tape.h
